@@ -1,3 +1,8 @@
+2014-06-03  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
+
+	* mcs-e20.el (coding-system-to-mime-charset): Check
+	coding-system-to-mime-charset-exclude-regexp is non-nil.
+
 2014-06-01  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	* mcs-e20.el (coding-system-to-mime-charset-exclude-regexp): New
